@@ -17,86 +17,40 @@
 
 package org.apache.solr.handler.admin;
 
-import static org.apache.solr.common.params.CommonParams.NAME;
-
-import java.net.URI;
-import org.apache.solr.cloud.CloudDescriptor;
-import org.apache.solr.cloud.ZkController;
-import org.apache.solr.common.SolrException;
-import org.apache.solr.common.cloud.Slice;
 import org.apache.solr.common.params.CoreAdminParams;
 import org.apache.solr.common.params.SolrParams;
-import org.apache.solr.core.SolrCore;
-import org.apache.solr.core.backup.ShardBackupId;
-import org.apache.solr.core.backup.repository.BackupRepository;
-import org.apache.solr.handler.RestoreCore;
+import org.apache.solr.core.CoreContainer;
+import org.apache.solr.handler.admin.api.RestoreCoreAPI;
+import org.apache.solr.handler.api.V2ApiUtils;
 
 class RestoreCoreOp implements CoreAdminHandler.CoreAdminOp {
   @Override
   public void execute(CoreAdminHandler.CallInfo it) throws Exception {
     final SolrParams params = it.req.getParams();
     String cname = params.required().get(CoreAdminParams.CORE);
-    String name = params.get(NAME);
-    String shardBackupIdStr = params.get(CoreAdminParams.SHARD_BACKUP_ID);
-    String repoName = params.get(CoreAdminParams.BACKUP_REPOSITORY);
+    final var requestBody = new RestoreCoreAPI.RestoreCoreRequestBody();
+    // "async" param intentionally omitted because CoreAdminHandler has already processed
+    requestBody.name = params.get(CoreAdminParams.NAME);
+    requestBody.shardBackupId = params.get(CoreAdminParams.SHARD_BACKUP_ID);
+    requestBody.location = params.get(CoreAdminParams.BACKUP_LOCATION);
+    requestBody.backupRepository = params.get(CoreAdminParams.BACKUP_REPOSITORY);
+    requestBody.validate();
 
-    if (shardBackupIdStr == null && name == null) {
-      throw new SolrException(
-          SolrException.ErrorCode.BAD_REQUEST,
-          "Either 'name' or 'shardBackupId' must be specified");
-    }
+    final CoreContainer coreContainer = it.handler.getCoreContainer();
+    final var api =
+        new RestoreCoreAPI(coreContainer, it.req, it.rsp, it.handler.getCoreAdminAsyncTracker());
+    final var response = api.restoreCore(cname, requestBody);
+    V2ApiUtils.squashIntoSolrResponseWithoutHeader(it.rsp, response);
+  }
 
-    ZkController zkController = it.handler.coreContainer.getZkController();
-    if (zkController == null) {
-      throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Only valid for SolrCloud");
-    }
+  public static RestoreCoreAPI.RestoreCoreRequestBody createRequestFromV1Params(SolrParams params) {
+    final var requestBody = new RestoreCoreAPI.RestoreCoreRequestBody();
+    // "async" param intentionally omitted because CoreAdminHandler has already processed
+    requestBody.name = params.get(CoreAdminParams.NAME);
+    requestBody.shardBackupId = params.get(CoreAdminParams.SHARD_BACKUP_ID);
+    requestBody.location = params.get(CoreAdminParams.BACKUP_LOCATION);
+    requestBody.backupRepository = params.get(CoreAdminParams.BACKUP_REPOSITORY);
 
-    try (BackupRepository repository = it.handler.coreContainer.newBackupRepository(repoName);
-        SolrCore core = it.handler.coreContainer.getCore(cname)) {
-
-      String location = repository.getBackupLocation(params.get(CoreAdminParams.BACKUP_LOCATION));
-      if (location == null) {
-        throw new SolrException(
-            SolrException.ErrorCode.BAD_REQUEST,
-            "'location' is not specified as a query"
-                + " parameter or as a default repository property");
-      }
-
-      URI locationUri = repository.createDirectoryURI(location);
-      CloudDescriptor cd = core.getCoreDescriptor().getCloudDescriptor();
-      // this core must be the only replica in its shard otherwise
-      // we cannot guarantee consistency between replicas because when we add data (or restore
-      // index) to this replica
-      Slice slice =
-          zkController
-              .getClusterState()
-              .getCollection(cd.getCollectionName())
-              .getSlice(cd.getShardId());
-      if (slice.getReplicas().size() != 1 && !core.readOnly) {
-        throw new SolrException(
-            SolrException.ErrorCode.SERVER_ERROR,
-            "Failed to restore core="
-                + core.getName()
-                + ", the core must be the only replica in its shard or it must be read only");
-      }
-
-      RestoreCore restoreCore;
-      if (shardBackupIdStr != null) {
-        final ShardBackupId shardBackupId = ShardBackupId.from(shardBackupIdStr);
-        restoreCore = RestoreCore.createWithMetaFile(repository, core, locationUri, shardBackupId);
-      } else {
-        restoreCore = RestoreCore.create(repository, core, locationUri, name);
-      }
-      boolean success = restoreCore.doRestore();
-      if (!success) {
-        throw new SolrException(
-            SolrException.ErrorCode.SERVER_ERROR, "Failed to restore core=" + core.getName());
-      }
-      // other replicas to-be-created will know that they are out of date by
-      // looking at their term : 0 compare to term of this core : 1
-      zkController
-          .getShardTerms(cd.getCollectionName(), cd.getShardId())
-          .ensureHighestTermsAreNotZero();
-    }
+    return requestBody;
   }
 }
